# vlm-ocr-doc-reader

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPER_WORKFLOW.md  README.md  README_EN.md  README_TASK004.md  pyproject.toml  pytest.ini  requirements.txt  run_e2e_test.py  vlm_ocr_doc_reader_spec.md
.agents/: analyst.md  architect.md  developer.md  reviewer.md  team-improvements.md  tech-lead.md
.agents/history/: .gitkeep
.claude/: settings.local.json
.claude/commands/: handoff-role.md
00_docs/: backlog.md
00_docs/architecture/: _questions_architect.md  decision_001_resolution_levels.md  decision_002_verify.md  implementation_plan.md  overview.md
01_tasks/001_base_utilities/: analysis_01.md  implementation_01.md  prompt_analyst.md  review_01.md  task_brief_01.md
01_tasks/002_vlm_processing/: _prompt_for_developer.md  _reviewer_prompt.md  analysis_01.md  analysis_02.md  implementation_01.md  implementation_02.md  prompt_analyst.md  review_01.md  review_02.md  task_brief_01.md
01_tasks/003_ocr_support/: analysis_01.md  implementation_01.md  prompt_analyst.md  review_01.md  task_brief_01.md
01_tasks/004_operations/: analysis_01.md  implementation_01.md  prompt_analyst.md  review_01.md  review_02.md  reviewer_prompt_01.md  task_brief_01.md  techlead_prompt_02.md
01_tasks/006_pyproject_and_publication/: analysis_01.md  implementation_01.md  review_01.md  task_brief_01.md
01_tasks/007_cli_interface/: analysis_01.md  analysis_02.md  analysis_03.md  implementation_01.md  implementation_02.md  implementation_03.md  review_01.md  review_02.md  review_03.md  task_brief_01.md
01_tasks/009_document_state_ocr_registry/: analysis_01.md  implementation_01.md  prompt_analyst.md  (+2 more)
scripts/: ocr_chunk_grid.py  qwen_vlm_probe.py
tests/: README.md  __init__.py
(+107 files in other folders)
