[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-ocr-doc-reader"
version = "0.1.0"
description = "Universal Python package for document processing via Vision Language Models and OCR"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ocr", "vlm", "document-processing", "pdf", "vision-language-models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "pymupdf>=1.23.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.0.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/vlm-ocr-doc-reader"
Repository = "https://github.com/your-org/vlm-ocr-doc-reader"
Documentation = "https://github.com/your-org/vlm-ocr-doc-reader/blob/main/00_docs/architecture/overview.md"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["02_src"]
include = ["vlm_ocr_doc_reader*"]
exclude = ["tests*"]

[project.scripts]
vlm-ocr-reader = "vlm_ocr_doc_reader.cli:main"
